--- a/styles/main.css
+++ b/styles/main.css
@@ -47,7 +47,7 @@ circle.node-people {
     padding: 15px 15px 15px 0px;
     text-decoration: none;
     font-size: 18px;
-    font-family: 'Open Sans',Helvetica,Arial,sans-serif;
+    font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #fff;
     display: block;
     transition: 0.3s;
@@ -107,16 +107,19 @@ circle.node-people {
 }
 
 .toggle-button {
-    padding: 10px 20px;
-    border-radius: 10px;
-    border-style: none;
-    background-color: #000;
+    padding: 20px 30px;
+    border-radius: 15px;
+    border-style: 1px;
+    background-color: #111;
     color: #fff;
     cursor: pointer;
+    font-size: 18px;
+    font-family: 'Oswald', sans-serif;
 }
 
 .toggle-button:hover {
-    background-color: #666666;
+    color: #000;
+    background-color: #fff;
     transition: all 0.3ms;
 }
 
