--- a/css/main.css
+++ b/css/main.css
@@ -126,12 +126,18 @@ nav.navbar-default {
     margin-bottom: 0px;
     border-radius: 0px;
     border: 0px;
-    border-bottom-color: currentcolor;
-    border-bottom-style: none;
-    border-bottom-width: 0px;
     border-bottom: 1px solid rgba(0,0,0,0.25);
 }
 
 .navbar {
     padding: 0 1rem;
+}
+
+.navbar a {
+    color: black;
+    font-family: 'Oswald', sans-serif;
+}
+
+.navbar-default .navbar-nav>li>a:hover {
+    background-color: rgba(0, 0, 0, 0.1);
 }
