--- a/css/main.css
+++ b/css/main.css
@@ -121,7 +121,7 @@ circle.node-people {
     outline: none;
 }
 
-nav.navbar-default {
+nav {
     background-color: white;
     margin-bottom: 0px;
     border-radius: 0px;
@@ -129,15 +129,16 @@ nav.navbar-default {
     border-bottom: 1px solid rgba(0,0,0,0.25);
 }
 
-.navbar {
-    padding: 0 1rem;
+.navbar-nav>ul {
+  display: block;
 }
 
-.navbar a {
+.navbar-nav>li>a {
     color: black;
     font-family: 'Oswald', sans-serif;
 }
 
-.navbar-default .navbar-nav>li>a:hover {
+.navbar-nav>li>a:hover {
     background-color: rgba(0, 0, 0, 0.1);
+    text-decoration: none;
 }
