--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ circle.node-people {
     background-color: rgba(0,0,0,0.9);
     overflow-x: hidden;
     transition: 0.3s;
-    padding-top: 60px;
+    padding-top: 100px;
 }
 
 .sidenav .item, .sidenav .closebtn {
@@ -124,16 +124,18 @@ circle.node-people {
 nav {
     border-bottom: 1px solid rgba(0,0,0,0.25);
     background-color: #fff;
-
+    padding-top:0!important;
+    padding-bottom:0!important;
 }
-/*
-.navbar {
-  padding-top: 0;
-  padding-bottom: 0;
-}*/
+
+ul.navbar-nav li a {
+  padding-top: 0.7rem!important;
+  padding-bottom: 0.7rem!important;
+}
 
 .navbar-brand {
     font-size: 0;
+    line-height: 0;
 }
 
 .nav-link {
