--- a/css/main.css
+++ b/css/main.css
@@ -142,6 +142,8 @@ ul.navbar-nav li a {
 
 .nav-link:hover {
     background-color: rgba(0, 0, 0, 0.1);
+    transition: 0.3s;
+    border-radius: 0;
 }
 
 .navbar-toggler {
