--- a/css/main.css
+++ b/css/main.css
@@ -166,13 +166,12 @@ ul.navbar-nav li a {
 svg .nodes .node:hover circle {
     cursor: pointer;
     fill: white !important;
-    stroke: currentColor; 
+    stroke: #000000; 
 }
 svg .nodes .node.selected circle {
     cursor: pointer;
     fill: white !important;
-    stroke: currentColor;
-    stroke-width: 2px; 
+    stroke: #000000;
 }
 svg .nodes .node circle {
     fill: currentColor; 
@@ -182,20 +181,21 @@ svg .nodes .node text {
     text-anchor: middle;
     fill: currentColor; 
 }
-svg .nodes .node.node-people {
+/* svg .nodes .node.node-people {
     color: #808080; 
 }
 svg .nodes .node.node-organization {
     color: #303030; 
-}
+} */
 svg .nodes .node.node-organization text {
     font-weight: bold; 
 }
 .svg .connection {
     pointer-events: none !important;
-    stroke: #333333; 
+    stroke: #000000;
 }
 
 svg .connection.connection-dotted {
-    stroke-dasharray: 5 3; 
+    stroke-dasharray: 5 3;
+    stroke: #000000; 
 }
