--- a/css/main.css
+++ b/css/main.css
@@ -165,3 +165,34 @@ ul.navbar-nav li a {
     max-width: 160px;
     max-height: 225px;
 }
+
+/*Gab Font*/
+@font-face {
+  font-family: 'gab-font';
+  src:  url('http://faitsetdocuments.com/fonts/gab-font.eot?88f047');
+  src:  url('http://faitsetdocuments.com/fonts/gab-font.eot?88f047#iefix') format('embedded-opentype'),
+    url('http://faitsetdocuments.com/fonts/gab-font.ttf?88f047') format('truetype'),
+    url('http://faitsetdocuments.com/fonts/gab-font.woff?88f047') format('woff'),
+    url('http://faitsetdocuments.com/fonts/gab-font.svg?88f047#gab-font') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="iconx-"], [class*=" iconx-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'gab-font' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.iconx-gab:before {
+  content: "\e900";
+}
